manifests/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: alouter-app
spec:
  selector:
    app: website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
